Update README and add documentation for Job Engine execution modes
- Translated and simplified the README to provide a clearer overview of the Job Engine and its execution modes in Portuguese.
- Added detailed documentation on the job processing flow, including a step-by-step guide and a comparison of execution strategies.
- Introduced new documents: "JORNADA-JOB.md" explaining the job lifecycle and "TRADEOFFS.md" detailing the trade-offs of each execution mode.
- Adjusted I/O simulation settings in `application.yml` for more realistic testing scenarios.